# xiuyin

./: .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: audio_registry.py  auth.py  main.py  schemas.py  users.py
app/routers/: audio.py  pitch_jobs.py  reference.py
core/: aligner.py  audio_io.py  correction_planner.py  feature_extractor.py  mixer.py  pitch_renderer.py  pitch_tracker.py  renderer.py  report.py  segment_locator.py  segmenter.py  vad.py
docs/: apc_training_plan.md  api.md  compliance_notes.md  upgrade_plan.md
examples/: demo_manifest.json
jobs/: batch_export.py  cleanup.py  paths.py  queue.py  status.py  web_export.py  worker.py
services/: intelligent_assist.py  source_separation.py
services/reference_providers/: __init__.py  base.py  freesound.py  jamendo.py  spotify.py  youtube.py
static/: simple_upload.js  style.css
templates/: login.html  simple_upload.html
tests/: test_aligner.py  test_audio_io.py  test_audio_upload.py  test_batch_export.py  test_correction_planner.py  test_feature_extractor.py  test_pitch_jobs.py  test_pitch_renderer.py  test_pitch_tracker.py  test_project_metadata.py  test_reference_frontend.py  test_reference_import.py  test_reference_search.py  test_renderer.py  test_report.py  test_segment_locator.py  test_segmenter.py  test_source_separation.py  test_web_upload.py
